src/objects/Campaign.object
<CustomObject>
    <fields>
        <fullName>Focus__c</fullName>
        <label>Focus</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New Collection</fullName>
                </value>
                <value>
                    <fullName>Private Sale</fullName>
                </value>
                <value>
                    <fullName>Public Sale</fullName>
                </value>
                <value>
                    <fullName>Nuovi Arrivi Preview</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Scostamento_Budget_Invoiced__c</fullName>
        <formula>IF(Total_Invoiced_Net_VAT__c = 0 , 0, ((Total_Budget_Net_VAT__c - Total_Invoiced_Net_VAT__c) /Total_Invoiced_Net_VAT__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Scostamento Budget/Invoiced</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Tipologia_Attivita__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tipologia Attività</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Pannello_Amministrazione_Marketing__c.Attiva__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>Pannello_Amministrazione_Marketing__c.RecordType.DeveloperName</field>
                <operation>notEqual</operation>
                <value>Evento</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Pannello_Amministrazione_Marketing__c</referenceTo>
        <relationshipLabel>Campagne</relationshipLabel>
        <relationshipName>Campagne</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Total_Budget_Net_VAT__c</fullName>
        <label>Total Budget Net VAT</label>
        <summarizedField>Attivita_Evento__c.Total_Budget_Net_VAT__c</summarizedField>
        <summaryForeignKey>Attivita_Evento__c.Campagna__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Invoiced_Net_VAT__c</fullName>
        <label>Total Invoiced Net VAT</label>
        <summarizedField>Attivita_Evento__c.Total_Invoiced_Net_VAT__c</summarizedField>
        <summaryForeignKey>Attivita_Evento__c.Campagna__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <listViews>
        <fullName>AllActiveCampaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Active Campaigns</label>
    </listViews>
    <listViews>
        <fullName>All_Inactive_Campaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CAMPAIGN.LAST_UPDATE</columns>
        <columns>CAMPAIGN.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Campaigns</label>
    </listViews>
    <listViews>
        <fullName>MyActiveCampaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Active Campaigns</label>
    </listViews>
    <recordTypes>
        <fullName>Direct_Marketing</fullName>
        <active>true</active>
        <label>Direct Marketing</label>
    </recordTypes>
    <recordTypes>
        <fullName>Ecommerce</fullName>
        <active>true</active>
        <label>Ecommerce</label>
    </recordTypes>
    <recordTypes>
        <fullName>Evento</fullName>
        <active>true</active>
        <label>Evento</label>
    </recordTypes>
    <recordTypes>
        <fullName>Pre_Saldi</fullName>
        <active>true</active>
        <description>Campagne pre saldi</description>
        <label>Pre-Saldi</label>
    </recordTypes>
    <recordTypes>
        <fullName>Special_Client</fullName>
        <active>true</active>
        <label>Special Client</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>